hid the adding comment feature for not loggedin user

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h2 id="leaveComment"> Leave a comment </h2>
-  <form id="form" action="/login" method="post">
+  <form id="form" method="post">
     Name:
     <input type="text" name ="fname" id="Name" required/> <br/> <br/>
     Comment:
