added a link to logout

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -5,6 +5,7 @@
     Guest Book
   </title>
   <center>
+    <a href="/logout"> Logout </a>
     <h2> <a id="goToHomePage" href="./index.html"><< </a>Guest Book </h2>
   </center>
 </head>
