fixed the bug of displaying comments

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h2 id="leaveComment"> Leave a comment </h2>
-  <form id="form" method="post">
+  <form id="form" action="login" method="post">
     Name:
     <input type="text" name ="fname" id="Name" required/> <br/> <br/>
     Comment:
